Increase font sizes for info displays and HDPI fixes